[tool.poetry]
name = "falcon"
version = "0.9.1"
description = "A python implementation of the signature scheme Falcon with packaging "
authors = ["Thomas Prest <thomas.prest@ens.fr>", "Yoann Piétri <Yoann.Pietri@lip6.fr>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <=3.11"
numpy = [
    {version="^1.21.5", python=">=3.7, <3.8"},
    {version="^1.22.3", python=">=3.8"},
]
pycryptodome = "^3.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
