[project]
name = "falcon-digital-signature"
description = "A python implementation of the signature scheme Falcon with packaging"
authors = [
    { name = "Thomas Prest", email = "thomas.prest@ens.fr" },
    { name = "Yoann Piétri", email = "Yoann.Pietri@lip6.fr" },
]
dynamic = ["version"]
readme = "README.md"
license = "MIT"

requires-python = ">=3.10, <3.15"

dependencies = [
    "numpy >=1.26.0, <2.0 ; python_version >= '3.10' and python_version < '3.11'",
    "numpy >=2.2.0, <3.0 ; python_version >= '3.11' and python_version < '3.15'",
    "pycryptodome >= 3.16.0",
]

[tool.poetry]
version = "0.9.4"
packages = [{ include = "falcon" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
